# ngspice

./: configure.ac
src/: Makefile.am  main.c
src/frontend/: control.c
src/spicelib/devices/: Makefile.am  dev.c
